@@ -1,3 +1,4 @@
+* Use UPPER to simulate missing ILIKE
 * Add CURRENT_DATE function
 * Fix DateTrunc function name
 * Add no_boolean Flavor
